# resawod-scheduler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  README.md  build-and-push.sh  config.toml.example  deploy-portainer.sh  docker-compose.yml
docs/: api.md  usage.md
src/: client.rs  commands.rs  config.rs  main.rs  models.rs  scheduler.rs  style.css
src/web/: dashboard.rs  mod.rs  slot_scheduler.rs  views.rs  watcher.rs
terraform/: main.tf  output.tf  provider.tf  stack.tf  variables.tf
