[package]
name = "resawod-scheduler"
version = "0.1.0"
edition = "2021"
description = "Auto-schedule training hours on RESAWOD (Nubapp)"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
leptos = { version = "0.7", features = ["ssr"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
